# bracketbot-ai

./: .gitignore  pyproject.toml
bracketbot_ai/: __init__.py  detector.py  model_manager.py  transcribe.py  transcriber.py
examples/: object_detection.py  stream.py  wakeword.py
scripts/: from_onnx.py
